<resources>
    <string name="app_name">Covid-19 Watch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="retry">Retry</string>
    <string name="covid_19_coronavirus_pandemic">COVID-19 CORONAVIRUS PANDEMIC</string>
    <string name="coronavairus_cases">Coronavairus Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="about_us">About Us</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="total_recovered">"Total Recovered "</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_confirmed">"New Confirmed "</string>
    <string name="new_deaths">New Deaths</string>
    <string name="new_recovered">New Recovered</string>
    <string name="contentDescription">content description</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_about_covid19">About Covid19</string>
    <string name="tab_about_us">About Us</string>
    <string name="coronavirus_disease_covid_19">Coronavirus disease (COVID‑19)</string>
    <string name="also_called_2019_ncov_2019_novel_coronavirus">Also called: 2019-nCov, 2019 Novel Coronavirus</string>
    <string name="overview">Overview</string>
    <string name="overview_details">Coronavirus disease (COVID-19) is an infectious disease caused by a new virus. The disease causes respiratory illness (like the flu) with symptoms such as a cough, fever, and in more severe cases, difficulty breathing. You can protect yourself by washing your hands frequently, avoiding touching your face, and avoiding close contact (1 meter or 3 feet) with people who are unwell.</string>
    <string name="how_it_spreads">How it spreads</string>
    <string name="spread_details">Coronavirus disease spreads primarily through contact with an infected person when they cough or sneeze. It also spreads when a person touches a surface or object that has the virus on it, then touches their eyes, nose, or mouth.</string>
    <string name="symptoms">Symptoms</string>
    <string name="Symtom_details_one">People may be sick with the virus for 1 to 14 days before developing symptoms. The most common symptoms of coronavirus disease (COVID-19) are fever, tiredness, and dry cough. Most people (about 80%) recover from the disease without needing special treatment.</string>
    <string name="symptoms_details_two">More rarely, the disease can be serious and even fatal. Older people, and people with other medical conditions (such as asthma, diabetes, or heart disease), may be more vulnerable to becoming severely ill.</string>
    <string name="symptoms_details_three">People may experience:\n • cough\n • fever\n • tiredness\n • difficulty breathing (severe cases)</string>
    <string name="prevention">Prevention</string>
    <string name="prevention_details_one">There’s currently no vaccine to prevent coronavirus disease (COVID-19).</string>
    <string name="prevention_details_two">You can protect yourself and help prevent spreading the virus to others if you:\n Do\n • Wash your hands regularly for 20 seconds, with soap and water or alcohol-based hand rub\n • Cover your nose and mouth with a disposable tissue or flexed elbow when you cough or sneeze\n • Avoid close contact (1 meter or 3 feet) with people who are unwell\n • Stay home and self-isolate from others in the household if you feel unwell\n Don\'t\n • Touch your eyes, nose, or mouth if your hands are not clean</string>
    <string name="treatments">Treatments</string>
    <string name="treatment_details_one">There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to help them breathe.</string>
    <string name="treatments_details_two">Self-Care\n If you have mild symptoms, stay at home until you’ve recovered. You can relieve your symptoms if you:\n • rest and sleep\n • keep warm\n • drink plenty of liquids\n • use a room humidifier or take a hot shower to help ease a sore throat and cough</string>
    <string name="treatments_details_three">Medical Treatments\n If you develop a fever, cough, and have difficulty breathing, promptly seek medical care. Call in advance and tell your health provider of any recent travel or recent contact with travelers.</string>
    <string name="api_service">API Service</string>
    <string name="url">https://api.covid19api.com/</string>
    <string name="default_notification_channel_id">default</string>
    <string name="text_confirmed_cases">Confirmed Cases : %s</string>
    <string name="text_deaths">Confirmed Deaths : %s</string>
    <string name="default_notification_channel_name">Covid-19 India</string>
    <string name="new_case">New Case</string>
    <string name="total_case">Total Case</string>
</resources>
