<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/ccLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:id="@+id/expandedImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:background="@color/themeAppBg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/total_confirmed"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtTotalConfirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="0"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_22ssp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="end"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_recovered"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_10sdp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/txtTotalRecovered"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:gravity="center"
                                android:text="0"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_deaths"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_10sdp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/txtTotalDeaths"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:text="0"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3.3"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/new_confirmed"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_10sdp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/txtNewConfirmed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:text="0"
                                android:textAlignment="center"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3.4"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/new_deaths"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_10sdp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/txtNewDeaths"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:text="0"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="3.3"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/new_recovered"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_10sdp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/txtNewRecovered"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:text="0"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F4F4"
            android:visibility="visible"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="@dimen/app_padding"
                android:paddingTop="@dimen/normal_padding"
                android:paddingEnd="@dimen/app_padding"
                android:paddingBottom="@dimen/_50sdp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_country_overview" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_about_corona"
            app:backgroundTint="@color/colorPrimary" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <include layout="@layout/content_error" />

</LinearLayout>

